[tool.poetry]
name = "kursovaya-3"
version = "0.1.0"
description = ""
authors = ["Segrey Agapov <stigrov@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
